# match-engine

./: .gitignore  MatchEngine.sln  README.md  engine_config.yml  global.json  main.py  main_mvp.py  package-lock.json  package.json  requirements.txt
Python/: pyproject.toml  tmp_snip.txt
Python/assets/: Gra piłkarska.docx
Python/data/: teams.json
Python/docs/: spec.md
Python/engine/: commentary.py  comments.py  config.py  eventlog.py  events.py  injury.py  match.py  minute_simulator.py  stats.py  telemetry.py  utils.py
Python/models/: __init__.py  team.py
Python/reports/: batch_stats.csv
Python/scripts/: docx_to_md.py  run.ps1  run_batch.py  run_game.ps1  test.ps1
Python/tests/: __init__.py  test_distance_diversity.py  test_distributions.py  test_duels_stats.py  test_engine_enhancements.py  test_event_invariants.py  test_freekicks_invariants.py  test_referee_profiles.py
data/: teams.json
engine/: __init__.py  comments.py  comments_adapter.py  comments_repo.py  comments_repo_mvp.py  config.py  duel.py  fatigue.py  match.py  minute_simulator.py  report_builder.py  sim_mvp.py  stats.py  substitutions.py  tactics.py  zones.py
frontend/: .env  index.html  package-lock.json  package.json
models/: player.py  team.py
reports/: matrix.csv
scripts/: run_batch.py  run_matrix.py
tests/: test_aggression_effects.py  test_cli_overall_and_keys.py  test_commentary_cooldown.py  test_commentary_snapshot.py  test_comments_formatter.py  test_duels_stats.py  test_eventlog.py  test_fatigue.py  test_injury.py  test_match_engine.py  test_ndjson_cli.py  test_xg.py
(+73 files in other folders)
