[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = ["dist","build","out",".venv",".git"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E","F","W","I",
]
ignore = [
    "E203",  # whitespace before ':'
]
exclude = ["dist","build","out",".venv",".git"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false

[project]
name = "match-engine"
version = "0.1.0"
description = "Football match engine"
requires-python = ">=3.11"
dependencies = []

